--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "auth-app",
+  "author": "Alejandro Zamudio",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -19,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.4.19",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
